--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ axum = "0.6.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.106"
-sea-orm = { version = "^0.12.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
+dns-lookup = "2.0.2"
 
 [dependencies.uuid]
 version = "1.4.1"
