--- a/vertex.yml
+++ b/vertex.yml
@@ -5,7 +5,9 @@ resources:
     memory: 16000000000
   properties: 
     gpu: rtx4060ti
-ip: [127, 0, 0, 1]
+ip: [0,0,0,0]
 port: 9500
 db: file:/database.db
 name: Jack1
+servers:
+- polarbird.lan
