--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,10 @@ edition = "2021"
 cgroups-rs = "0.3.3"
 libc = "0.2.147"
 tokio = { version = "1.32.0", features = ["full"] }
-axum = "0.6.20"
+axum = {version = "0.6.20", features = ["headers"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.106"
-dns-lookup = "2.0.2"
-base64 = "0.21.4"
-regex = "1.9.5"
-lazy_static = "1.4.0"
 
 [dependencies.uuid]
 version = "1.4.1"
