--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ axum = {version = "0.6.20", features = ["headers"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.106"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [dependencies.uuid]
 version = "1.4.1"
