--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 
 [dependencies]
 cgroups-rs = "0.3.3"
-libc = "0.2.147"
 tokio = { version = "1.32.0", features = ["full"] }
 axum = {version = "0.6.20", features = ["headers"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.106"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+lazy_static = "1.4.0"
+regex = "1.9.5"
 
 [dependencies.uuid]
 version = "1.4.1"
