--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0.106"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 lazy_static = "1.4.0"
 regex = "1.9.5"
+chrono = "0.4.30"
+libc = "0.2.148"
 
 [dependencies.uuid]
 version = "1.4.1"
